--- a/build.yaml
+++ b/build.yaml
@@ -13,11 +13,11 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: corne_left
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: corne_right
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: settings_reset
